# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  OK, unpack doesn't like absolute paths.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Yeah, should be CDROM_ROOT, not CD_ROOT.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Made sure we check the CD for MY_P.tar.gz when doing our unpack.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Made sure we keep both sbin and bin for vmware-esx-tools.

  21 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> ++,
  -app-emulation/vmware-workstation-tools/metadata.xml:
  Renamed 5.5.3 vmware-workstation-tools ebuild to match the other ebuilds.

  20 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.3/000_all_initd-scripts.
  patch:
  Added new 5.5.3 version of vmware-workstation-tools.

  18 Nov 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Did some work on the vmware-server-tools ebuild, inspired by Chris.
  It now builds the modules and installs the revelant files automatically.
  TODO: Comment out the module building from the config script.
  TODO: Fix some of the inconsistencies between /opt/vmware/tools and
        /opt/vmware/server/tools usage.

  17 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1.ebuild,
  +app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Added a new revision of the ESX tools, which should work with the new
  eclass. I have not tested it yet, but will do so next week if someone else
  hasn't let me know that it works by then.

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
  patch: